src/objects/Byt__c.object
<CustomObject>
    <description>Informácie o bytových jednotkách v developerskom projekte.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Zákazník kupujúci si byt</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Byty</relationshipLabel>
        <relationshipName>Byty</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>D_tum_podpisu_ZoD_ZoBKZ__c</fullName>
        <label>Dátum podpisu ZoD/ZoBKZ</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dan_na_rozpo_et__c</fullName>
        <label>Dané na rozpočet</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Etapa2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Etapa</label>
        <referenceTo>Etapa__c</referenceTo>
        <relationshipLabel>Byty</relationshipLabel>
        <relationshipName>Byty</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Etapa__c</fullName>
        <label>Etapa</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Etapa 1</fullName>
                </value>
                <value>
                    <fullName>Etapa 2</fullName>
                </value>
                <value>
                    <fullName>Etapa 3</fullName>
                </value>
                <value>
                    <fullName>Etapa 4</fullName>
                </value>
                <value>
                    <fullName>Etapa 5</fullName>
                </value>
                <value>
                    <fullName>Etapa 6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Izbovos__c</fullName>
        <label>Izbovosť</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1i</fullName>
                </value>
                <value>
                    <fullName>2i</fullName>
                </value>
                <value>
                    <fullName>2,5i</fullName>
                </value>
                <value>
                    <fullName>3i</fullName>
                </value>
                <value>
                    <fullName>3,5i</fullName>
                </value>
                <value>
                    <fullName>4i</fullName>
                </value>
                <value>
                    <fullName>5i</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Byty</relationshipLabel>
        <relationshipName>Byty</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ozna_enie__c</fullName>
        <label>Označenie</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Poschodie__c</fullName>
        <label>Poschodie</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pozn_mky__c</fullName>
        <label>Poznámky</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Prijat_zadanie_KLZ__c</fullName>
        <label>Prijaté zadanie KLZ</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Projekt__c</fullName>
        <label>Projekt</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_n_zaslania_n_vrhu_na_stretnutie__c</fullName>
        <label>Termín zaslania návrhu na stretnutie</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Typ__c</fullName>
        <label>Typ</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Byt</fullName>
                    <default>true</default>
                    <label>Byt</label>
                </value>
                <value>
                    <fullName>Apartmán</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Uz_vierka_tandardov__c</fullName>
        <label>Uzávierka štandardov</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vchod__c</fullName>
        <label>Vchod</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zaslanie_v_zvy_KLZ_najnesk_r_do__c</fullName>
        <label>Zaslanie výzvy KLZ najneskôr do</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>slo_ZoBKZ_KZ__c</fullName>
        <label>Číslo ZoBKZ / KZ</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Byt</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Názov</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Byty</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>